fixed divs on services page in case image overlaps, and added border and margins to images in gallery

--- a/src/css/gallery.css
+++ b/src/css/gallery.css
@@ -7,12 +7,16 @@
 
 .gallery-container {
   padding: 18px 18px;
+  margin-bottom: 20px;
 }
 
 .gallery-container img {
   margin: 0 auto;
-  background-size: cover;
-  width: 100%;
-  height: auto;
-  border-radius: 10px;
+  background-size: auto;
+  width: 97%;
+  height: 450px;
+  border-radius: 20px;
+  border-style: solid;
+  border-width: 3px;
+  border-color: #76bbff;
 }
