--- a/src/css/service.css
+++ b/src/css/service.css
@@ -22,6 +22,7 @@ border-color: #76bbff;
 .first-div {
     width: 33%;
     transition: .3s linear;
+    background-color: rgb(0, 0, 0, .8);
 }
 .service-container div:hover{
     font-size: 1.5rem;
@@ -37,12 +38,16 @@ border-color: #76bbff;
     border-style: solid;
     border-color: white;
     border-width: 0 2px 0 0px;
+    background-color: rgb(0, 0, 0, .8);
+
 }
 .final-div {
     width: 33%;
     border-style: solid;
     border-color: white;
     border-width: 0 0 0 0;
+    background-color: rgb(0, 0, 0, .8);
+
 }
 .service-container1{
     justify-content: center;
